Do not store ECT if it's value is unknown

Do not store Effective Connection Type (ECT) in prefs
if its value is UNKNOWN.

Also, enable caching for Ethernet connections
in Network Quality Estimator (NQE).

Bug: 762064
Change-Id: I19b7f51644bdf9b6ccfa7182500b3cba27febd52
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester
Reviewed-on: https://chromium-review.googlesource.com/648651
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500474}
Former-commit-id: d7718847e9938b80e58148d91555c2bb6eff9b14